Details
Description
the sound stops after 500ms when using the demo app from BRD.
this is wave-output (not midi)
As I can not upload, I would retest when needed.
Attachments
Issue Links
- relates to
-
CORE-15693 "Hover! 1.0" game from rapps has no sound in ros, but has sound in XPSP3
-
- Open
-
-
CORE-15324 Pocket Tanks 1.6 does never play sound or music, but does on XPSP3
-
- Resolved
-
-
CORE-17156 Rockman 7 FC doesn't have any audio
-
- Resolved
-
-
CORE-14784 [AC97] Remood 0.9a crashes which is proven to be induced by AC97
-
- Resolved
-